--- a/index.css
+++ b/index.css
@@ -1,3 +1,4 @@
+*{margin: 0;padding: 0;}
 body{
     font-family: 'Poppins', sans-serif;
 }
@@ -12,7 +13,30 @@ h1{
     float: left;
     margin-left: 5%;
     padding-left: 2%;
+    padding-bottom: 40px;
+    overflow: hidden;
 }
 .half-width img {
     width: 100%;
+}
+.top-banner{
+    background-image: url('./img/top-banner.png');
+    background-repeat: no-repeat;
+    overflow: hidden;
+}
+section{
+    padding-top: 25px;
+    height: 500px;
+}
+.link-button{
+    text-decoration: none;
+    background-image: linear-gradient(45deg,lightSalmon , tomato);
+    padding: 10px 25px;
+    margin: 0px 1px;
+    color: white;
+    font-weight: 700;
+    border-radius: 5px;
+}
+.half-width p {
+    margin-bottom: 18px;
 }
