--- a/index.css
+++ b/index.css
@@ -9,7 +9,10 @@ h2{
     font-size: 40px;
 
 }
-.name-highlight{
+p{
+    color: dimgray;
+}
+.orange-highlight{
     color: orange;
 }
 .half-width{
@@ -48,4 +51,27 @@ section{
     background-image: url('./img/dream-bg.png');
     background-repeat: no-repeat;
     background-position:right;
+}
+.single-box{
+    box-shadow: 10px 10px 40px gray;
+    border-radius: 5px;
+    height: 60%;
+}
+.exprience-area{
+    background-image: url("./img/exp-bg.png");
+    background-repeat: no-repeat;
+    background-position:left;
+}
+#full-stack{
+    border-left: 7px solid;
+    border-image: linear-gradient(180deg,lightSalmon , tomato);
+    border-image-slice: 1;
+}
+#baby-stack{
+    border-left: 7px solid;
+    border-image: linear-gradient(180deg,blue , cyan);
+    border-image-slice: 1;
+}
+footer{
+    text-align: center;
 }
